added Google gemini api key
